<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="150dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FAQ">

        <ImageView
            android:id="@+id/imageView12"
            style="@style/ICON"
            android:layout_width="135dp"
            android:layout_height="75dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/key_faq"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageView12"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/key_1_what_is_ilife"
            style="@style/TEXT"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/key_firstq"
            style="@style/TEXT"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/key_2"
            style="@style/TEXT"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/key_2q"
            style="@style/TEXT"
            app:layout_constraintStart_toStartOf="@+id/textView35"
            app:layout_constraintTop_toBottomOf="@+id/textView35" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/key_3"
            style="@style/TEXT"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView39"
            app:layout_constraintTop_toBottomOf="@+id/textView39" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/key_3q"
            app:layout_constraintStart_toStartOf="@+id/textView41"
            style="@style/TEXT"
            app:layout_constraintTop_toBottomOf="@+id/textView41" />

        <TextView
            android:id="@+id/textView44"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/key_4"
            style="@style/TEXT"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView42"
            app:layout_constraintTop_toBottomOf="@+id/textView42" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/key_4q"
            style="@style/TEXT"
            app:layout_constraintStart_toStartOf="@+id/textView44"
            app:layout_constraintTop_toBottomOf="@+id/textView44" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/key_5"
            style="@style/TEXT"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView45"
            app:layout_constraintTop_toBottomOf="@+id/textView45" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/key_5q"
            app:layout_constraintStart_toStartOf="@+id/textView46"
            style="@style/TEXT"
            app:layout_constraintTop_toBottomOf="@+id/textView46" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/key_6"
            style="@style/TEXT"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView47"
            app:layout_constraintTop_toBottomOf="@+id/textView47" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/key_6q"
            app:layout_constraintStart_toStartOf="@+id/textView48"
            style="@style/TEXT"
            app:layout_constraintTop_toBottomOf="@+id/textView48" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>